fix: highlights comp spacing

--- a/src/assets/styles/global.sass
+++ b/src/assets/styles/global.sass
@@ -299,7 +299,7 @@ main
     display: flex
     flex-wrap: wrap
     justify-content: flex-start
-    gap: var(--spacing-between-images)
+    gap: var(--spacing-base)
     padding: var(--spacing-base) var(--spacing-side)
     padding-bottom: calc(var(--spacing-base) * 2)
     &-Item
